# fitness-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_diet_macro_workout_exercise_items.py  003_add_created_at_columns.py  004_add_workout_llm_payload.py  005_request_audits.py  006_account_deletion_histories.py  007_add_enable_ai_and_diet_llm_payload.py
app/: deps.py  main.py
app/api/routes/: __init__.py  app_flags.py  auth.py  diet.py  health.py  sync.py  users.py  workouts.py
app/auth/: apple.py
app/core/: config.py  logging.py  security.py
app/db/: session.py
app/middleware/: __init__.py  audit.py
app/models/: __init__.py  account_deletion_history.py  diet_log.py  diet_macro_item.py  enums.py  request_audit.py  user.py  workout_exercise_item.py  workout_log.py
app/schemas/: __init__.py  agent_outputs.py  auth.py  diet.py  sync.py  user.py  workout.py
app/services/: agent_parser.py  sync.py
tests/: conftest.py  test_app_flags.py  test_audit.py  test_auth_apple.py  test_auth_dev.py  test_diet.py  test_health.py  test_users.py  test_workouts.py
